# PyMico

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
ch01/: main.py
ch01/model/: __init__.py  user.py
ch02/: background.py  main.py  utils.py
ch02/feedback/: __init__.py  post.py
ch02/handler/: __init__.py  exceptions.py
ch02/login/: __init__.py  user.py
ch02/places/: __init__.py  destination.py
ch02/tourist/: __init__.py  visit.py
ch03/: database.py  dependencies.py  main.py  model.py
ch03/api/: book.py  user.py
ch04/: main.py
ch04/gateway/: api_router.py
ch04/middleware/: exception_handler_middleware.py
ch04/student_mgt/: student_main.py
ch04/student_mgt/controllers/: admin.py  assignments.py  reservations.py
ch04/student_mgt/models/: library_req.py  student.py
ch04/student_mgt/services/: student.py
ch05/: database.py  docker-compose.yaml  log.py  main.py
ch05/api/: signup.py
ch05/models/: login.py
ch05/models/data/: signup.py
ch05/models/req/: signup.py
ch05/repo/: signup.py
ch05/tests/: conftest.py  test_signup_repo.py
ch07/: config.yaml  login_basic.py  login_jwt.py
scripts/: run_all_tests.py
